--- a/Pokemon/Pokemon.vcxproj.filters
+++ b/Pokemon/Pokemon.vcxproj.filters
@@ -29,5 +29,13 @@
     <ClInclude Include="header.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Characters.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.text">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
