--- a/Pokemon/Pokemon.vcxproj
+++ b/Pokemon/Pokemon.vcxproj
@@ -203,6 +203,7 @@
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="otherFunctions.cpp" />
     <ClCompile Include="Pokemon.cpp" />
+    <ClCompile Include="SpriteCode.cpp" />
     <ClCompile Include="Stats.cpp" />
     <ClCompile Include="Team.cpp" />
   </ItemGroup>
